# Vessel

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  GOALS.md
src/: main.cpp
src/engine/: easings.cpp  easings.hpp  engine.cpp  engine.hpp  properties.cpp  properties.hpp  rl.hpp  scene.cpp  scene.hpp  text-node.cpp  text-node.hpp  utils.cpp  utils.hpp
src/io/: log.cpp  log.hpp
src/misc/: rtconfig.cpp  rtconfig.hpp
